Import and Export UI
Added a basic UI and implementation for importing and exporting data.
Hooked up the routes and tested importing and exporting a version 001
file.

Slipped in the TemplateView in base.js but didn't end up using it.  I
think it will encapsulate common logic for template views pretty well.

Should close #175.

--- a/core/admin/views/default.hbs
+++ b/core/admin/views/default.hbs
@@ -64,6 +64,7 @@
         <script src="/core/admin/assets/js/views/blog.js"></script>
         <script src="/core/admin/assets/js/views/editor.js"></script>
         <script src="/core/admin/assets/js/views/settings.js"></script>
+        <script src="/core/admin/assets/js/views/debug.js"></script>
         <script src="/core/admin/assets/js/router.js"></script>
         {{{block "bodyScripts"}}}
         <script>
