--- a/core/admin/views/debug.hbs
+++ b/core/admin/views/debug.hbs
@@ -1,37 +1,48 @@
 {{!< default}}
-<div class="wrapper">
+<div id="debug-page" class="wrapper">
     <aside class="settings-sidebar" role="complementary">
         <header>
             <h1 class="title">Ugly Debug Tools</h1>
         </header>
         <nav class="settings-menu">
             <ul>
-                <li class="Data management"><a href="#">General</a></li>
+                <li><a class="general" href="javascript:void(0);">General</a></li>
             </ul>
         </nav>
     </aside>
-    <section class="settings-content">
+    <section id="debug-general" class="settings-content" style="display: block">
         <header>
             <h2 class="title">General</h2>
-            <button class="button-save">Save</button>
         </header>
         <section class="content">
             {{> flashes}}
-            <form id="settings-general">
+            <form id="settings-export">
                 <fieldset>
                     <label>
-                        <b>Delete Database</b>
-                        <a href="/ghost/debug/db/delete/" class="button-delete">Delete</a>
-                        <p>Delete the entire database so you can start again with empty tables</p>
-                    </label>
-                    <label>
-                        <b>Populate Database</b>
-                        <a href="/ghost/debug/db/populate/" class="button-add">Populate</a>
-                        <p>Populate the database with the default fixtures
-                            (<strong>Warning: </strong>only works on empty DB)</p>
+                        <b>Export</b>
+                        <a href="/ghost/debug/db/export/" class="button-save">Export</a>
+                        <p>Export the blog settings and data.</p>
                     </label>
                 </fieldset>
-
+            </form>
+            <form id="settings-import" method="post" action="/ghost/debug/db/import/" enctype="multipart/form-data">
+                <fieldset>
+                    <label>
+                        <b>Import</b>
+                        <input type="file" class="button-add" name="importfile"></input>
+                        <input type="submit" class="button-save" value="Import"></input>
+                        <p>Import from another Ghost installation.</p>
+                    </label>
+                </fieldset>
+            </form>
+            <form id="settings-resetdb">
+                <fieldset>
+                    <label>
+                        <b>Reset Database</b>
+                        <a href="/ghost/debug/db/reset/" class="button-delete">Reset</a>
+                        <p>Delete the entire database so you can start again with empty tables</p>
+                    </label>
+                </fieldset>
             </form>
         </section>
     </section>
