Widget Bug Fixes
Fixes bug with Ghost Widget and also fixes wrong active size option being shown in settings.

--- a/core/admin/assets/sass/layouts/dashboard.scss
+++ b/core/admin/assets/sass/layouts/dashboard.scss
@@ -349,6 +349,16 @@
     }
   }
 
+  &.widget-settings {
+      .widget-content {
+          background-image: none;
+      }
+      .widget-footer {
+          background: inherit;
+          opacity: 1;
+      }
+  }
+
 } // .widget-image
 
 /* ==========================================================================
