--- a/core/admin/assets/tpl/widget.hbs
+++ b/core/admin/assets/tpl/widget.hbs
@@ -12,7 +12,7 @@
        </section>
        <footer class="widget-footer">
            <div class="widget-size-options">
-               <div class="size-options-container active js-widget-resizer" data-size="1x1">
+               <div class="size-options-container js-widget-resizer" data-size="1x1">
                    <span class="mini-widget size-1x1 active"></span>
                    <span class="mini-widget size-1x1"></span>
                    <span class="mini-widget size-1x1"></span>
