--- a/core/admin/views/partials/navbar.hbs
+++ b/core/admin/views/partials/navbar.hbs
@@ -1,6 +1,6 @@
 
 <header id="global-header" class="navbar">
-    <a id="ghost" href="#" data-off-canvas="left"><span class="hidden">Ghost</span></a>
+    <a id="ghost" href="http://vip.tryghost.org" data-off-canvas="left"><span class="hidden">Ghost</span></a>{{! TODO: Change this to actual Ghost homepage }}
     <nav id="global-nav" role="navigation">
         <ul id="main-menu" >
             {{#each adminNav}}
