Removing John's filth
Removed frontend profanaties.

--- a/core/admin/views/partials/navbar.hbs
+++ b/core/admin/views/partials/navbar.hbs
@@ -10,7 +10,7 @@
             <li id="usermenu" class="subnav">
                 <a href="#" data-toggle="ul">
                     <img class="avatar" src="/core/admin/assets/img/user.jpg" alt="Avatar" />
-                    <span class="name">John O'Nolan</span>
+                    <span class="name">User Menu</span>
                 </a>
                 <ul>
                     <li class="usermenu-profile"><a href="#">Your Profile</a></li>
