--- a/core/admin/assets/tpl/preview.hbs
+++ b/core/admin/assets/tpl/preview.hbs
@@ -5,7 +5,7 @@
     {{! TODO: JavaScript toggle featured/unfeatured}}
     <span class="status">Published</span>
     <span class="normal">by</span>
-    <span class="author">John O'Nolan</span>
+    <span class="author">Joe Bloggs</span>
     <section class="post-controls">
         <a class="post-edit" href="#"><span class="hidden">Edit Post</span></a>
         <a class="post-settings" href="#" data-toggle=".menu-drop-right"><span class="hidden">Post Settings</span></a>
