--- a/core/admin/assets/tpl/preview.hbs
+++ b/core/admin/assets/tpl/preview.hbs
@@ -9,7 +9,7 @@
     <section class="post-controls">
         <a class="post-edit" href="#"><span class="hidden">Edit Post</span></a>
         <a class="post-settings" href="#" data-toggle=".menu-drop-right"><span class="hidden">Post Settings</span></a>
-        <ul class="menu-drop-right">
+        <ul class="menu-drop-right overlay">
             <li><a href="#" class="url">URL</a></li>
             <li><a href="#" class="something">Something</a></li>
             <li><a href="#" class="delete">Delete</a></li>
