--- a/core/admin/views/partials/navbar.hbs
+++ b/core/admin/views/partials/navbar.hbs
@@ -8,11 +8,11 @@
             {{/each}}
 
             <li id="usermenu" class="subnav">
-                <a href="#" data-toggle="ul">
+                <a href="#" data-toggle="ul" class="dropdown">
                     <img class="avatar" src="/core/admin/assets/img/user.jpg" alt="Avatar" />
                     <span class="name">User Menu</span>
                 </a>
-                <ul>
+                <ul class="overlay">
                     <li class="usermenu-profile"><a href="#">Your Profile</a></li>
                     <li class="divider"></li>
                     <li class="usermenu-help"><a href="#">Help / Support</a></li>
