Notifications on front end
Should close #37. There are persistent and passive notifications.

Persistent ones:
* are stored on `ghost.notifications`.
* have an api made to add / remove them with client side ajax logic (probably not the most elegant, but works)
* uses a modified `flashes.hbs` template
* will only disappear if user closes the bar
* stack

Passive
* added with backbone view / collection combo
* stack
* disappears on navigation and when user closes it

--- a/core/server/views/default.hbs
+++ b/core/server/views/default.hbs
@@ -27,7 +27,9 @@
         {{/unless}}
 
         <main role="main" id="main">
-            {{> flashes}}
+            <aside id="flashbar">
+                {{> flashes}}
+            </aside>
 
             {{{body}}}
         </main>
