--- a/core/server/views/partials/flashes.hbs
+++ b/core/server/views/partials/flashes.hbs
@@ -1,26 +1,8 @@
 {{#if messages}}
-    {{#each messages.error}}
-        <section class="notification-error js-notification">
-          {{.}}
-          <a class="close" href="#"><span class="hidden">Close</span></a>
-        </section>
-    {{/each}}
-    {{#each messages.success}}
-        <section class="notification-success js-notification">
-            {{.}}
-            <a class="close" href="#"><span class="hidden">Close</span></a>
-        </section>
-    {{/each}}
-    {{#each messages.warn}}
-        <section class="notification-alert js-notification">
-            {{.}}
-            <a class="close" href="#"><span class="hidden">Close</span></a>
-        </section>
-    {{/each}}
-    {{#each messages.info}}
-        <section class="notification js-notification">
-            {{.}}
-            <a class="close" href="#"><span class="hidden">Close</span></a>
+    {{#each messages}}
+        <section class="notification{{#if type}}-{{type}}{{/if}} notification-{{status}} js-notification">
+          {{message}}
+          <a class="close" href="#" data-id="{{id}}"><span class="hidden">Close</span></a>
         </section>
     {{/each}}
 {{/if}}
