--- a/core/admin/views/default.hbs
+++ b/core/admin/views/default.hbs
@@ -28,7 +28,9 @@
         {{/unless}}
 
         <main role="main" id="main">
-            {{> flashes}}
+            <aside id="flashbar">
+                {{> flashes}}
+            </aside>
 
             {{{body}}}
         </main>
