--- a/core/admin/views/default.hbs
+++ b/core/admin/views/default.hbs
@@ -17,7 +17,7 @@
         <link rel="shortcut icon" href="/favicon.ico">
         <meta http-equiv="cleartype" content="on">
 
-        <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Lato:300,400,700">
+        <link rel="stylesheet" type='text/css' href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700'>
         <link rel="stylesheet" href="/core/admin/assets/css/screen.css">
         <link rel="stylesheet" type="text/css" href="/core/admin/assets/lib/codemirror/codemirror.css"> <!-- TODO: Kill this - #29 -->
         {{{block "pageStyles"}}}
