--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,15 +6,15 @@
 
 <title>{{ page.title }}</title>
 
-<link href="{{ site.url }}/assets/css/bootstrap.css" rel="stylesheet">
-<link href="{{ site.url }}/assets/css/main.css" rel="stylesheet">
+<link href="assets/css/bootstrap.css" rel="stylesheet">
+<link href="assets/css/main.css" rel="stylesheet">
 
 <!--[if lt IE 9]>
-  <script src="{{ site.url }}/assets/js/html5shiv.js"></script>
-  <script src="{{ site.url }}/assets/js/respond.min.js"></script>
+  <script src="assets/js/html5shiv.js"></script>
+  <script src="assets/js/respond.min.js"></script>
 <![endif]-->
 
-<link rel="shortcut icon" href="{{ site.url }}/assets/ico/favicon.png">
+<link rel="shortcut icon" href="assets/ico/favicon.png">
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
 
 </head>
@@ -31,22 +31,22 @@
     <div class="nav-collapse collapse bs-navbar-collapse">
       <ul class="nav navbar-nav">
         <li>
-          <a href="{{ site.url }}/installation">Installation</a>
+          <a href="installation">Installation</a>
         </li>
         <li>
-          <a href="{{ site.url }}/usage">Usage</a>
+          <a href="usage">Usage</a>
         </li>
         <li>
-          <a href="{{ site.url }}/customisation">Customisation</a>
+          <a href="customisation">Customisation</a>
         </li>
         <li>
-          <a href="{{ site.url }}/themes">Themes</a>
+          <a href="themes">Themes</a>
         </li>
         <li>
-          <a href="{{ site.url }}/plugins">Plugins</a>
+          <a href="plugins">Plugins</a>
         </li>
         <li>
-          <a href="{{ site.url }}/help">Help</a>
+          <a href="help">Help</a>
         </li>
       </ul>
     </div>
@@ -64,8 +64,8 @@
     All documentation is released under the Creative Commons <a href="http://creativecommons.org/licenses/by/3.0/">By-3.0</a> License.</p>
 </footer>
 
-<script src="{{ site.url }}/assets/js/jquery.js"></script>
-<script src="{{ site.url }}/assets/js/bootstrap.min.js"></script>
+<script src="assets/js/jquery.js"></script>
+<script src="assets/js/bootstrap.min.js"></script>
 
 </body>
 </html>
