closes #195 posts date on content page
- adds dateFormat handlebars helper for client side with extra option to format in time since style
- adds this extra dateFormat option to existing server side helper.
- adds scss for draft and scheduled status
- adds true/false values to post for draft  and published to validate in handlebars
- changes admin>content post collection query to order posts by updated_at values in router.js
- adds minified moment.js and links to moment.js and helper.js for clientside

--- a/core/admin/assets/tpl/list-item.hbs
+++ b/core/admin/assets/tpl/list-item.hbs
@@ -1,7 +1,12 @@
 <a class="permalink{{#if featured}} featured{{/if}}" href="#">
     <h3 class="entry-title">{{title}}</h3>
     <section class="entry-meta">
-        <time datetime="2013-01-04" class="date">5 minutes ago</time>
+        <time datetime="2013-01-04" class="date">
+            {{#if published}}Published
+                {{#if updated_at}}{{dateFormat updated_at timeago="True"}}
+                {{else}}{{dateFormat published_at timeago="True"}}{{/if}}
+            {{else}}<span class="status-draft">Draft</span>{{/if}}
+        </time>
         {{!<span class="views">1,934</span>}}
     </section>
 </a>
