--- a/core/admin/views/default.hbs
+++ b/core/admin/views/default.hbs
@@ -53,6 +53,8 @@
         <script src="/core/admin/assets/js/admin-ui-temp.js"></script>
         <script src="/core/admin/assets/js/markdown-actions.js"></script>
         <script src="/core/admin/assets/js/tagui.js"></script>
+        <script src="/core/admin/assets/lib/moment.js"></script>
+        <script src="/core/admin/assets/js/helpers/index.js"></script>
 
         <!-- // require '/core/admin/assets/js/models/*' -->
         <script src="/core/admin/assets/js/models/post.js"></script>
