Fixes 'All Posts' menu not being the right location and also not hiding properly
See #188

--- a/core/admin/assets/sass/layouts/manage.scss
+++ b/core/admin/assets/sass/layouts/manage.scss
@@ -46,6 +46,10 @@
                 padding: 5px;
                 margin-left:-5px;
             }
+
+            .menu-drop {
+                display: block;
+            }
         }
 
         .button-add {
