--- a/core/admin/views/content.hbs
+++ b/core/admin/views/content.hbs
@@ -3,7 +3,7 @@
   <header class="floatingheader">
       <section class="content-filter">
           <a class="dropdown" href="#" data-toggle=".menu-drop">All Posts</a>
-          <ul class="menu-drop" style="display:none;">
+          <ul class="menu-drop overlay" style="display:none;">
               <li class="active"><a href="#">All Posts</a></li>
               <li><a href="#">Recently Edited</a></li>
               <li><a href="#">By Author...</a></li>
