--- a/core/admin/assets/tpl/list-item.hbs
+++ b/core/admin/assets/tpl/list-item.hbs
@@ -2,10 +2,11 @@
     <h3 class="entry-title">{{title}}</h3>
     <section class="entry-meta">
         <time datetime="2013-01-04" class="date">
-            {{#if published}}Published
-                {{#if updated_at}}{{dateFormat updated_at timeago="True"}}
-                {{else}}{{dateFormat published_at timeago="True"}}{{/if}}
-            {{else}}<span class="status-draft">Draft</span>{{/if}}
+            {{#if published}}
+                Published {{dateFormat published_at timeago="True"}}
+            {{else}}
+                <span class="status-draft">Draft</span>
+            {{/if}}
         </time>
         {{!<span class="views">1,934</span>}}
     </section>
