Rename content fields - closes #253
- rename "content" to "content_raw"
- rename "content_raw" to "content"
- change all references

--- a/core/admin/assets/tpl/preview.hbs
+++ b/core/admin/assets/tpl/preview.hbs
@@ -15,5 +15,5 @@
     </section>
 </header>
 <section class="content-preview-content">
-    <div class="wrapper">{{{content_html}}}</div>
+    <div class="wrapper">{{{content}}}</div>
 </section>
