--- a/core/server/views/settings.hbs
+++ b/core/server/views/settings.hbs
@@ -30,13 +30,13 @@
 
                     <label>
                         <b>Blog Logo</b>
-                        <img src="/core/client/assets/img/logo.png" alt="logo" height="38" width="381"/>
+                        <img src="/public/img/logo.png" alt="logo" height="38" width="381"/>
                         <p>Display a logo on your site in place of blog title</p>
                     </label>
 
                     <label>
                         <b>Blog Icon</b>
-                        <img src="/core/client/assets/img/test-icon.png" alt="logo" height="38" width="38"/>
+                        <img src="/public/img/test-icon.png" alt="logo" height="38" width="38"/>
                         <p>The icon for your blog, used in your browser tab and elsewhere</p>
                     </label>
 
@@ -184,7 +184,7 @@
                 <ul class="users">
                     <li class="user">
                         <figure class="user-image">
-                            <img src="/core/client/assets/img/user.jpg" alt="user"/>
+                            <img src="/public/img/user.jpg" alt="user"/>
                         </figure>
                         <section class="user-meta">
                             <h4 class="user-name">Some Name</h4>
@@ -194,7 +194,7 @@
                     </li>
                     <li class="user">
                         <figure class="user-image">
-                            <img src="/core/client/assets/img/user.jpg" alt="user"/>
+                            <img src="/public/img/user.jpg" alt="user"/>
                         </figure>
                         <section class="user-meta">
                             <h4 class="user-name">Some Name</h4>
