Cleaning up all url strings to new url format, updating readme with instructions to run locally.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
   <script src="{{ site.url }}/assets/js/respond.min.js"></script>
 <![endif]-->
 
-<link rel="shortcut icon" href="/assets/img/favicon.png">
+<link rel="shortcut icon" href="{{ site.url }}/assets/img/favicon.png">
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
 
 </head>
@@ -32,22 +32,22 @@
     <div class="nav-collapse collapse bs-navbar-collapse">
       <ul class="nav navbar-nav">
         <li>
-          <a href="installation">Installation</a>
+          <a href="{{ site.url }}/installation">Installation</a>
         </li>
         <li>
-          <a href="usage">Usage</a>
+          <a href="{{ site.url }}/usage">Usage</a>
         </li>
         <li>
-          <a href="customisation">Customisation</a>
+          <a href="{{ site.url }}/customisation">Customisation</a>
         </li>
         <li>
-          <a href="themes">Themes</a>
+          <a href="{{ site.url }}/themes">Themes</a>
         </li>
         <li>
-          <a href="plugins">Plugins</a>
+          <a href="{{ site.url }}/plugins">Plugins</a>
         </li>
         <li>
-          <a href="help">Help</a>
+          <a href="{{ site.url }}/help">Help</a>
         </li>
       </ul>
     </div>
