improves unit testing for pagination and fixes pagination partial template (removed extra </nav>)
 removes console logs for error handling in testing and travis environments

--- a/core/server/helpers/tpl/pagination.hbs
+++ b/core/server/helpers/tpl/pagination.hbs
@@ -5,6 +5,6 @@
     {{/if}}
     <div class="page-number">Page {{page}}<span class="extended"> of {{pages}}</span></div>
     {{#if prev}}
-        <div class="next-page"><a href="/page/{{prev}}/">← Newer Posts</a></div></nav>
+        <div class="next-page"><a href="/page/{{prev}}/">← Newer Posts</a></div>
     {{/if}}
 </nav>
